tests/fixtures/invalid/divmod_dict_str.py
# Cannot call divmod() with Dict[str, int], Str
x = divmod({"a": 1}, "hello")
